# Parallel_Computing_on_FPGA

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  VITIS_AI_FPGA_WORKFLOW.md  eval_s2_tta.py  launch_kd_sota.sh  phase1.txt  phase2.txt  phase3.txt  phase4.txt  quantize_test_log.txt  setup_ccs.sh  test_api.py
.claude/: settings.local.json
Paper/: MULTIAGENT_REVIEW.md  main.tex  preamble.tex  references.bib
Paper/.claude/agents/: content-reviewer.md  final-qa.md  language-editor.md  reference-auditor.md  structure-checker.md
Paper/.claude/commands/: paper-review.md
Paper/Parallel_Computing_on_FPGA/: main.tex  preamble.tex  references.bib
Paper/Parallel_Computing_on_FPGA/archive/: metrics_explanation.md
Paper/Parallel_Computing_on_FPGA/sections/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  04_experiments.tex  05_conclusion.tex
Paper/Parallel_Computing_on_FPGA/tables/: table_1.tex  table_2.tex  table_3.tex  table_4.tex  table_5.tex  table_6.tex  table_7.tex  table_8.tex  table_e2e_latency.tex  table_energy_model.tex  table_kauh.tex  table_perf_cpu_dpu.tex  table_qat.tex  table_resource_util.tex
Paper/Parallel_Computing_on_FPGA___IEEE_Journal_of_Selected_Topics_in_Signal_Processing/: main.tex  preamble.tex  references.bib
Paper/Parallel_Computing_on_FPGA___IEEE_Journal_of_Selected_Topics_in_Signal_Processing/figures/: Fig3_Cascaded_Framework.drawio
Paper/docs/: paper_review_major_revision.md
Paper/review-logs/: round1-content.md  round1-final-qa.md  round1-language.md  round1-references.md  round1-structure.md
Paper/sections/: 01_introduction.tex  02_related_work.tex  03_methodology.tex  05_conclusion.tex
Paper/tables/: table_2.tex  table_4.tex  table_9.tex  table_e2e_latency.tex  table_energy_model.tex  table_qat.tex
docs/: Fixing_Paper.md  ICBHI_2017_KD_SOTA_EXPERIMENT_PLAN.md  ICBHI_3CLASS_KD_PIPELINE.md  ICBHI_4CLASS_KD_SOTA_ANALYSIS_STRATEGY.md  ICBHI_KD_SOTA_STRATEGIES_V2.md  ICBHI_KD_SOTA_TUNING_STRATEGY.md  ICBHI_SOTA_Benchmark_Strategies.md  ICBHI_SOTA_DISTILLATION_STRATEGIES.md  ICBHI_SOTA_Strategy.md  ICBHI_Technical_Implementation.md  Paper_Feedback_Review.md  VITIS_AI_FPGA_WORKFLOW.md  icbhi_benchmark_comparison_report.md  kd_add_rsc_benchmark_prompt.md  training_analysis_report.md
docs/notebook/: part-3-feature-extraction-modeling-95-acc.ipynb
docs/papers/: Dong et al. - 2025 - Adaptive Differential Denoising for Respiratory Sounds Classification.md  Dong et al. - 2025 - Respiratory sounds classification by fusing the time-domain and 2D spectral features.md  Jeong and Kim - 2025 - Patient-Aware Feature Alignment for Robust Lung Sound ClassificationCohesion-Separation and Global.md  Kim et al. - 2026 - Meta-Ensemble Learning with Diverse Data Splits for Improved Respiratory Sound Classification.md  Toikkanen and Kim - 2025 - Improving Respiratory Sound Classification with Architecture-Agnostic Knowledge Distillation from En.md
docs/references/: Improving Respiratory Sound Classification with Architecture-Agnostic Knowledge Distillation from Ensembles.md
fpga/vitis_ai_flow/: quantize.py
include/: CascadedLogic.h  CnnInference.hpp  Common.h  FeatureExtraction.h  Logger.hpp  SignalPrep.hpp  WaveletTransform.hpp
inspect_results/: inspect_DPUCZDX8G_ISA1_B2304.txt
layer1_3/: layer1_preprocessing.py  layer2_random_forest.py
python/: README.md  __init__.py  combine_dataset.py  distillation.py  distillation_02.py  requirements.txt  train_cnn_1class.py  train_cnn_4class.py  train_cnn_4class_v2.py  validate_and_export_dpu.py  wavelet_transform.py
python/Inspector/: inspect_student_model.py
python/common/: __init__.py  paths.py
python/layer1_3_experiments/: layer1_preprocessing.py  layer2_random_forest.py
python/preprocessing/: combine_dataset.py  precompute_cache.py  preprocess_audio_dsp.py  preprocessing.py  wavelet_transform.py
python/quantization/: create_calib_dataset.py  export_ts.py  generate_calib_data.py  quantize_distillation_02.py  quantize_distillation_03.py
python/rsc-ensemble-kd/: README.md  main.py  main_custom.py
python/training/: distillation_02.py  eval_e1_advanced.py  eval_e1_calibrated.py  eval_e1_ensemble.py  eval_e1_final.py  icbhi_kd_e1_calibrated_ensemble.py  icbhi_kd_e1s_sensitive.py  icbhi_kd_e2_patchmix_distill.py  icbhi_kd_e3_pafa_relational.py  icbhi_kd_pipeline_binary_aux.py  icbhi_kd_pipeline_efficient_multiseed.py  icbhi_kd_pipeline_multiview_ensemble.py  icbhi_kd_s10_adaptive_threshold.py  icbhi_kd_s11_comprehensive.py  icbhi_kd_s12_finetune_teacher.py  icbhi_kd_s13_ensemble_kd.py  icbhi_kd_s14_binary_first.py  icbhi_kd_s1_tta_calibrated.py  icbhi_kd_s2_feature_attention.py  icbhi_kd_s3_curriculum_ema.py  icbhi_kd_s4_transformer_mega_ensemble.py  icbhi_kd_s5_sota_combined.py  icbhi_kd_s6_diffusion_augment.py  icbhi_kd_s7_mixture_of_experts.py  icbhi_kd_s8_meta_learning.py  icbhi_kd_s9_multitask_antitask.py  icbhi_sota_augmentation.py  icbhi_sota_evaluation.py  icbhi_sota_loss_functions.py  kd_cnn_bilstm_to_cnn.py  kd_icbhi_3class.py  kd_icbhi_4class_efficientnet.py  kd_icbhi_4class_sota.py  kd_icbhi_4class_sota_bilstm.py  kd_icbhi_4class_sota_efficientnet.py  train_efficientnet_b0.py  train_mobilenetv2.py  train_mobilenetv2_vitis.py
python/visualizations/: plot_kd_architecture.py  plot_teacher_student_nn.py  visualize_cnn_architecture.py  visualize_features.py  visualize_hybrid_mel.py  visualize_rf_architecture.py  visualize_signal.py  visualize_vitis_ai_pipeline.py
quant_result_cle/: StudentModel.py  quant_info.json  quantization_metrics.json
quantize_distillation_result/: quant_info.json  quantization_metrics.json
quantize_distillation_v2_result/: fp32_baseline_metrics.json
src/: main.cpp
src/classifiers/: CascadedLogic.cpp  CnnInference.cpp  RandomForestCPU.cpp
src/features/: FeatureExtraction.cpp  WaveletTransform.cpp
src/preprocessing/: SignalPrep.cpp
src/utils/: Logger.cpp
tests/cpp/: test_signal_prep.cpp
vitis_ai_flow/: arch.json
wandb/: latest-run
wandb/run-20260522_092150-i5k2f9e8/: run-i5k2f9e8.wandb
(+80 files in other folders)
